[gd_scene load_steps=6 format=3 uid="uid://3cb5q4rpv65d"]

[ext_resource type="Script" path="res://world/resource.gd" id="1_rlw74"]
[ext_resource type="Texture2D" uid="uid://ct1ao6hpcporl" path="res://assets/resources.png" id="2_oqxlw"]
[ext_resource type="PackedScene" uid="uid://ntu2y6838qth" path="res://world/item_particles.tscn" id="3_gvn3f"]
[ext_resource type="Texture2D" uid="uid://drd8fa5nseoys" path="res://assets/items.png" id="3_vekhf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2puvp"]
resource_local_to_scene = true
atlas = ExtResource("3_vekhf")
region = Rect2(0, 32, 16, 16)

[node name="Resource" type="Node2D"]
script = ExtResource("1_rlw74")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_oqxlw")
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)

[node name="Area2D" type="Area2D" parent="."]

[node name="CPUParticles2D" parent="." instance=ExtResource("3_gvn3f")]
texture = SubResource("AtlasTexture_2puvp")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
